tests/regression/pr36/shadow.expected
File "tests/regression/pr36/shadow.smt2", line 3, character 0-23:
Error Shadowing: f was already declared at line 2, character 0-23
