tests/regression/pr36/shadow.smt2
(set-logic QF_UF)
(declare-fun f () Bool)
(declare-fun f () Bool)
(check-sat)
(exit)
